# alphanet

./: .gitignore  README.md
backtester/: backtester-plan.md  data-access-plan.md
backtester/config/: data-sources.example.json
backtester/data-providers/: README.md  pyproject.toml
backtester/data-providers/alpaca/: README.md  importer.py  schema.sql
backtester/data-providers/alpha-vantage/: README.md  schema.sql
backtester/data-providers/cboe/: README.md  schema.sql
backtester/data-providers/common/: dolt_loader.py
backtester/data-providers/dolthub/: README.md
backtester/data-providers/fred/: README.md  importer.py  schema.sql
backtester/data-providers/imf-portwatch/: README.md  schema.sql
backtester/data-providers/stooq/: README.md  schema.sql
backtester/data-providers/yahoo-finance/: README.md  schema.sql
docs/: architecture.md  data-sources.md  portfolio-engine.md  rule-engine.md  runtime.md
rules-compiler/: README.md  go.mod  implementation-plan.md  rules-compiler-plan.md
rules-compiler/cmd/alphanet-compile/: main.go
rules-compiler/internal/air/: build.go  hash.go  manifest.go  model.go  write.go
rules-compiler/internal/app/: compile.go
rules-compiler/internal/compiler/: agent_reports.go  compiler.go  engine_factory.go  manual.go  signals.go
rules-compiler/scripts/: ai_hedge_fund_adapter.py  tradingagents_adapter.py  tradingagents_wrapper.py
specs/v0.1/: CHANGELOG.md  SPEC.md  alphanet.schema.json  manifest.schema.json  portfolio.schema.json  regime.schema.json  rule.schema.json  signal.schema.json
(+29 files in other folders)
