[project]
name = "alphanet-data-providers"
version = "0.1.0"
description = "AlphaNet data provider importer scripts"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alpaca-py==0.43.4",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
